--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   
 <body>
 <h1>My First Github Page </h1>
-  <P> Homer Simpson Loves Donuts. MMMMMMM....</p>
+  <P> this change was made on my macbook pro</p>
 </body>
 </html>
