--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <h1>My First Github Page </h1>
   <P> this change was made on my macbook pro</p>
+    <p>Here is another change i am making</p>
 </body>
 </html>
