--- a/index.html
+++ b/index.html
@@ -6,8 +6,38 @@
 </heaed>
   
 <body>
-<h1>My First Github Page </h1>
-  <P> this change was made on my macbook pro</p>
-    <p>Here is another change i am making</p>
+<header>
+<h1>Michael Burtons VR Photo Tour</h1>
+<h2>MIKE MIKE MIKE... What day is it Mike? Its hump day!</h2>
+</header>
+
+<nav>
+<ul>
+  <li><a href="index.html"></a> Home </li>
+  <li><a href="#">Agenda</a></li>
+  <li><a href="#">Schedule</a></li>
+</ul>
+</nav>
+
+<main>
+<h1>Home</h1>
+<img src="desktop/bowman.jpeg" alt="Disc"
+<p>lorem impsum text here</p>
+<ol>
+<li>Bootstrap</li>
+<li>Materialize</li>
+<li>Foundation</li>
+</li>
+
+</ol>
+
+
+</main>
+
+<footer>
+&copy; Michael Burton 2021
+
+</footer>
+
 </body>
 </html>
