--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <main>
 <h1>Home</h1>
-<img src="desktop/bowman.jpeg" alt="Disc">
+<img src="desktop/Disc.jpeg" alt="Disc">
 <p>lorem impsum text here</p>
 <ol>
 <li>Bootstrap</li>
