--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-us">
 <head>
 <meta charset="UTF-8">
+<link href="css/stylesheets.css" rel="stylesheets">
 <title>Michael Burtons First Page: Home</title> 
 </heaed>
   
